Update test requirements.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ matrix:
 install:
    - pip install -r requirements.txt -r requirements-dev.txt
 script:
-   - py.test --cache-clear --flake8 mdx_variables.py tests.py
+   - pytest --cache-clear --flake8 mdx_variables.py tests.py
